# egraph-serialize

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  release-instructions.md
src/: algorithms.rs  graphviz.rs  lib.rs
tests/: eqsolve.json  fibonacci-demand.json  fibonacci-split.json  fibonacci.json  list_list_hard_test_ellisk_2019-02-15T11.26.41--bench005_it7.json  path.json  physics_scientific_unsolved_4h_ellisk_2019-07-20T18.05.46--bench000_it0.json  round_trip.rs  tiny.json
tests-viz/: INDEX.md  README.md  path.json
