[package]
edition = "2021"
name = "egraph-serialize"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "indexmap/serde", "ordered-float/serde"]
graphviz = ["dep:graphviz-rust"]

[dependencies]
indexmap = "2.0.0"
once_cell = "1.18.0"
ordered-float = "3.7.0"

[dependencies.serde]
default-features = false
features = ["derive", "alloc", "rc"]
optional = true
version = "1.0.166"

[dependencies.serde_json]
features = ["preserve_order"]
optional = true
version = "1.0.100"

[dependencies.graphviz-rust]
optional = true
version = "0.6.2"

[dev-dependencies]
glob = "0.3.1"
