[package]
edition = "2021"
authors = ["Max Willsey <me@mwillsey.com>"]
description = "A library to serialize e-graphs"
name = "egraph-serialize"
version = "0.1.0"
repository = "https://github.com/egraphs-good/egraph-serialize"
keywords = ["e-graphs"]
license = "MIT"
readme = "README.md"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "indexmap/serde", "ordered-float/serde"]
graphviz = ["dep:graphviz-rust"]

[dependencies]
indexmap = "2.0.0"
once_cell = "1.18.0"
ordered-float = "3.7.0"

[dependencies.serde]
default-features = false
features = ["derive", "alloc", "rc"]
optional = true
version = "1.0.166"

[dependencies.serde_json]
features = ["preserve_order"]
optional = true
version = "1.0.100"

[dependencies.graphviz-rust]
optional = true
version = "0.6.2"

[dev-dependencies]
glob = "0.3.1"
